[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Background/skill_background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Theme2/close_button_10x10.png" type="Texture" id=2]
[ext_resource path="res://GUI/Skill/Skill.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/tinyfont.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Assets/Skill/skill-empty-rectangle-24x24.png" type="Texture" id=5]
[ext_resource path="res://Assets/Skill/bg_outline.png" type="Texture" id=6]
[ext_resource path="res://Assets/Skill/change_skill_icon.png" type="Texture" id=7]
[ext_resource path="res://Assets/Background/change_skill_slot_bg.png" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 28, 28 )

[node name="Skill" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -87.0
margin_right = 80.0
margin_bottom = 57.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseSkillPopup" type="TouchScreenButton" parent="TextureRect"]
position = Vector2( 146, 3 )
normal = ExtResource( 2 )

[node name="Label" type="Label" parent="TextureRect"]
margin_right = 160.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 4 )
text = "SKILL"
align = 1
valign = 1
uppercase = true

[node name="change_skill_slot_bg" type="Sprite" parent="TextureRect"]
position = Vector2( 81, 36 )
texture = ExtResource( 8 )

[node name="SkillSlot" type="GridContainer" parent="TextureRect"]
margin_left = 40.0
margin_top = 24.0
margin_right = 120.0
margin_bottom = 48.0
custom_constants/hseparation = 32
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="TextureRect/SkillSlot"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )

[node name="ChangeButton" type="TextureButton" parent="TextureRect/SkillSlot/Slot1"]
margin_left = 24.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 20.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Panel" parent="TextureRect/SkillSlot"]
margin_left = 56.0
margin_right = 80.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )

[node name="ChangeButton" type="TextureButton" parent="TextureRect/SkillSlot/Slot2"]
margin_left = 24.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 20.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="Panel" parent="TextureRect/SkillSlot"]
visible = false
margin_left = 92.0
margin_right = 116.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )

[node name="ChangeButton" type="TextureButton" parent="TextureRect/SkillSlot/Slot3"]
margin_left = 24.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 20.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill" type="GridContainer" parent="TextureRect"]
margin_left = 21.0
margin_top = 62.0
margin_right = 141.0
margin_bottom = 132.0
custom_constants/vseparation = 14
custom_constants/hseparation = 18
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill1" type="Panel" parent="TextureRect/Skill"]
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
custom_styles/panel = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="TextureRect/Skill/Skill1"]
position = Vector2( 14, 14 )
texture = ExtResource( 5 )

[node name="Skill2" type="Panel" parent="TextureRect/Skill"]
margin_left = 46.0
margin_right = 74.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
custom_styles/panel = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="TextureRect/Skill/Skill2"]
position = Vector2( 14, 14 )
texture = ExtResource( 5 )

[node name="Skill3" type="Panel" parent="TextureRect/Skill"]
margin_left = 92.0
margin_right = 120.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
custom_styles/panel = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="TextureRect/Skill/Skill3"]
position = Vector2( 14, 14 )
texture = ExtResource( 5 )

[node name="Skill4" type="Panel" parent="TextureRect/Skill"]
margin_top = 42.0
margin_right = 28.0
margin_bottom = 70.0
rect_min_size = Vector2( 28, 28 )
custom_styles/panel = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="TextureRect/Skill/Skill4"]
position = Vector2( 14, 14 )
texture = ExtResource( 5 )

[node name="Skill5" type="Panel" parent="TextureRect/Skill"]
margin_left = 46.0
margin_top = 42.0
margin_right = 74.0
margin_bottom = 70.0
rect_min_size = Vector2( 28, 28 )
custom_styles/panel = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="TextureRect/Skill/Skill5"]
position = Vector2( 14, 14 )
texture = ExtResource( 5 )

[node name="Skill6" type="Panel" parent="TextureRect/Skill"]
margin_left = 92.0
margin_top = 42.0
margin_right = 120.0
margin_bottom = 70.0
rect_min_size = Vector2( 28, 28 )
custom_styles/panel = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="TextureRect/Skill/Skill6"]
position = Vector2( 14, 14 )
texture = ExtResource( 5 )

[node name="Skill7" type="Panel" parent="TextureRect/Skill"]
visible = false
margin_top = 56.0
margin_right = 28.0
margin_bottom = 84.0
rect_min_size = Vector2( 28, 28 )
custom_styles/panel = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="TextureRect/Skill/Skill7"]
position = Vector2( 14, 14 )
texture = ExtResource( 5 )

[node name="Skill8" type="Panel" parent="TextureRect/Skill"]
visible = false
margin_left = 46.0
margin_top = 56.0
margin_right = 74.0
margin_bottom = 84.0
rect_min_size = Vector2( 28, 28 )
custom_styles/panel = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="TextureRect/Skill/Skill8"]
position = Vector2( 14, 14 )
texture = ExtResource( 5 )

[node name="Skill9" type="Panel" parent="TextureRect/Skill"]
visible = false
margin_left = 92.0
margin_top = 56.0
margin_right = 120.0
margin_bottom = 84.0
rect_min_size = Vector2( 28, 28 )
custom_styles/panel = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="TextureRect/Skill/Skill9"]
position = Vector2( 14, 14 )
texture = ExtResource( 5 )
[connection signal="pressed" from="TextureRect/CloseSkillPopup" to="." method="_on_CloseSkillPopup_pressed"]
